# [package]
# name = "api_calls"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# tokio = "1.47.1"
# serde = "1"
# serde_json = "1"
# reqwest = "0.12"

[package]
name = "api_calls"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
